# retool

./: .gitattributes  .gitignore  .gitmodules  LICENSE  Pipfile  _clonelist.py  _compilations.py  _overrides.py  _regional_renames.py  _regional_renames_final.py  _renames.py  _supersets.py  _version.py  changelog.md  clonerel.py  datafile.dtd  install-dependencies.bat  internal-config.json  mkdocs.yml  nitroe.py  pylock.toml  pyproject.toml  readme.md  release.md  retool-gui.py  retool.py  retoolgui.py  updateclonelists.py  user-config.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  missing-or-incorrect-clone.md  missing-or-mismatched-clone.md
clonelists/: Apple - Macintosh.json  Arcade - Namco - System 246.json  Arcade - Sega - Naomi.json  Atari - 2600.json  Atari - 5200.json  Atari - 7800.json  Atari - Jaguar.json  Atari - Lynx.json  Bandai - Pippin.json  Bandai - WonderSwan Color.json  Bandai - WonderSwan.json  Benesse - Pocket Challenge V2.json  Benesse - Pocket Challenge W.json  Coleco - ColecoVision.json  Commodore - 64 (PP).json  Commodore - Amiga CD.json  Commodore - Amiga CD32.json  Commodore - Amiga CDTV.json  Fairchild - Channel F.json  Fujitsu - FM-Towns.json  GCE - Vectrex.json  GamePark - GP32.json  IBM - PC compatible.json  Magnavox - Odyssey 2.json  Magnavox - Odyssey2.json  Mattel - HyperScan.json  Mattel - Intellivision.json  Microsoft - MSX.json  Microsoft - MSX2.json  Microsoft - Xbox 360.json  Microsoft - Xbox.json  NEC - PC Engine - TurboGrafx 16.json  NEC - PC Engine CD & TurboGrafx CD.json  NEC - PC-98 series.json  NEC - PC-FX & PC-FXGA.json  Nintendo - Family Computer Disk System (FDS).json  Nintendo - Game Boy Advance (Multiboot).json  Nintendo - Game Boy Advance.json  Nintendo - Game Boy Color.json  Nintendo - Game Boy.json  (+39 more)
config/: regions.json  tags.json
docs/: beginners.md  changelog.md  clone-lists.md  clrmamepro.md  contribute-clone-lists-categories.md  contribute-clone-lists-description.md  contribute-clone-lists-mias.md  contribute-clone-lists-overrides.md  contribute-clone-lists-pull-request.md  contribute-clone-lists-removes.md  contribute-clone-lists-top-level-keys.md  contribute-clone-lists-variants-compilations.md  contribute-clone-lists-variants-filters.md  contribute-clone-lists-variants-local.md  contribute-clone-lists-variants-supersets.md  contribute-clone-lists-variants-titles.md  contribute-clone-lists-variants.md  contribute-clone-lists.md  contribute-code.md  contribute-metadata-files.md  dat-support.md  download.md  how-retool-works.md  how-to-use-retool-cli.md  how-to-use-retool-gui-exclusions.md  how-to-use-retool-gui-local-names.md  how-to-use-retool-gui-options.md  how-to-use-retool-gui-overrides-post-filters.md  how-to-use-retool-gui-priorities.md  how-to-use-retool-gui-settings.md  how-to-use-retool-gui-system-settings.md  how-to-use-retool-gui.md  index.md  integrate.md  naming-system.md  retool-1g1r.md  romvault.md  system-config.md  terminology.md  troubleshooting.md  (+2 more)
docs/images/: retool-gui.psd
docs/includes/: file.md  file_windows.md  sha256.md  sha256_windows.md
docs/overrides/: main.html
docs/site/: 404.html  index.html  sitemap.xml
docs/stylesheets/: extra.css
images/: retool.icns
metadata/: ACT - Apricot PC Xi.json  APF - Imagination Machine.json  APF - MP-1000.json  Acorn - Archimedes.json  Acorn - Risc PC.json  Amstrad - CPC.json  Apple - I.json  Apple - II Plus.json  Apple - II.json  Apple - IIGS.json  Apple - IIe.json  Apple - Macintosh.json  Arcade - Namco - Sega - Nintendo - Triforce.json  Arcade - Namco - System 246.json  Arcade - Sega - Chihiro.json  Arcade - Sega - Lindbergh.json  Arcade - Sega - Naomi 2.json  Arcade - Sega - Naomi.json  Atari - 2600.json  Atari - 5200.json  Atari - 7800.json  Atari - 8-bit Family.json  Atari - Jaguar.json  Atari - Lynx.json  Atari - ST.json  Bally - Astrocade (Tapes).json  Bandai - Design Master Denshi Mangajuku.json  Bandai - Gundam RX-78.json  Bandai - Pippin.json  Bandai - WonderSwan Color.json  Bandai - WonderSwan.json  Benesse - Pocket Challenge V2.json  Benesse - Pocket Challenge W.json  Bit Corporation - Gamate.json  Casio - Loopy.json  Casio - PV-1000.json  Coleco - ColecoVision.json  Commodore - 64 (PP).json  Commodore - 64 (Tapes).json  Commodore - 64.json  (+170 more)
modules/: chooseparent.py  classes.py  clone_list.py  clonelists.py  config.py  constants.py  customfilters.py  dats.py  importdata.py  input.py  interruptible_pool.py  output.py  parentselection.py  perftest.py  stats.py  titletools.py  titleutils.py  update_clone_list_metadata.py  userinput.py  utils.py  xml.py
modules/clone_lists/: clone_list.py  local_names.py  mias.py  retroachievements.py  update_clone_list_metadata.py  variants.py  variants_orchestrator.py
modules/config/: config.py  read_write_config.py
modules/dat/: parse_dat.py  process_dat.py
modules/gui/: custom_widgets.py  gui_config.py  gui_init.py  gui_setup.py  gui_utils.py  gui_widgets.py  gui_windows.py  resources_rc.py  retool_about.py  retool_clone_list_name.py  retool_progress.py  retool_settings.py  retool_ui.py  windows.py
modules/title_selection/: choose_1g1r.py  (+20 more)
qt_source/: resources.qrc  resources_rc.py  retool-about.ui  retool-about_ui.py  retool-clone-list-name.ui  retool-clone-list-name_ui.py  retool-settings.ui  retool-settings_ui.py  retool.ui  retool_ui.py
tests/: clone-list-schema.json  clone_list_filters.py  compilations.py  determinism.py  exclusions.py  filters.py  integration.py  label_retroachievements.py  languages.py  list.py  local_names.py  machine_disk.py  machine_tags.py  mia.py  missing_header_data.py  missing_title_data.py  modern_rips.py  no_size_hash.py  numbered.py  oldest.py  original_header.py  overrides.py  post_filters.py  prefer_licensed.py  prefer_modern_rips.py  prefer_oldest.py  prefer_regions.py  prefer_retroachievements.py  regions.py  removes_dat.py  report.py  unit.py  user-config_1.yaml  user-config_2.yaml  user-config_3.yaml  user-config_4.yaml  user-config_5.yaml  user-config_6.yaml  user-config_7.yaml  user-config_8.yaml
user-filters/: readme-cli.md  readme-gui.md
(+71 files in other folders)
